--- a/_pages/legal-services.html
+++ b/_pages/legal-services.html
@@ -23,10 +23,10 @@ personal_injury_section:
     If you were injured through no fault of your own and need help navigating through the legal system contact us immediately.
   lists:
     - ACCIDENTS (CAR, 18 WHEELER, MOTORCYCLE, BOAT)
-    - Wrongful Death
-    - Slip and Fall
     - Workplace Injury
+    - Wrongful Death
     - Medical Malpractice
+    - Slip and Fall
     - General Negligence
   button_text: "learn more"
   button_url: "/personal-injury"
@@ -39,12 +39,13 @@ criminal_law_section:
 
   lists:
     - Felonies &amp; Misdemeanors
-    - Drug Crimes
-    - Violent Crimes
-    - Theft
     - Domestic Abuse
+    - Drug Crimes
     - Cyber Crimes
+    - Violent Crimes
     - "&amp; More"
+    - Theft
+
   button_text: "learn more"
   button_url: "/criminal-law"
   image_url: "/assets/images/gallery_05.jpg"
@@ -55,12 +56,12 @@ family_law_section:
     We realize that extended litigation should be a last alternative in resolving a domestic or family dispute.
   lists:
     - Divorce
-    - Child Custody
-    - Child Support
-    - Spousal Support
     - Community Property Partitions
+    - Child Custody
     - Paternity/Disavowal Actions
+    - Child Support
     - Prenuptial Agreements
+    - Spousal Support
     - Adoptions
   button_text: "learn more"
   button_url: "/family-law"
@@ -72,10 +73,10 @@ dwi_owi_section:
     If you have been arrested for driving under the influence of alcohol or drugs, it is imperative that you contact my office immediately.
   lists:
     - Driving Under the Influence of Drugs/Alcohol
-    - Car, Truck, Motorcycle, or Boat
-    - DUI RELATED HIT & RUN
     - Underage DUI
+    - Car, Truck, Motorcycle, or Boat
     - ACCIDENT DEFENSE
+    - DUI RELATED HIT & RUN
     - RELATED TRAFFIC OFFENSES
   button_text: "learn more"
   button_url: "/dwi-owi"
@@ -87,10 +88,10 @@ estate_planning_section:
     Call today to set up an appointment so that I can help you plan for your future so that your wishes can be carried out.
   lists:
     - "Last Will &amp; Testament"
-    - Power of Attorney
-    - Living Will
     - Succession
+    - Power of Attorney
     - Trusts
+    - Living Will
     - "&amp; More"
   button_text: "learn more"
   button_url: "/estate-planning"
@@ -102,8 +103,8 @@ additional_services_section:
     We pride ourselves on being a full service law firm and strive to fulfill our clients needs.
   lists:
     - Contracts
-    - "Cash Sales &amp; Leases"
     - Civil Litigation
+    - "Cash Sales &amp; Leases"
     - Property Law/Boundary Disputes
   button_text: "learn more"
   button_url: "/additional-services"
@@ -137,40 +138,72 @@ additional_services_section:
 <!--        </section>-->
 <!--    </section>-->
 
-<section class="container-fluid" style="background: linear-gradient(180deg, #741625, #3a0b13);">
-  <div class="py-5">
-    <div class="row align-items-center">
-      <div class="col-6">
-          {% if page.banner_section.title %}
-        <div class="d-flex justify-content-center">
-          <h1 class="col-8 display-1 text-white">{{page.banner_section.title}}</h1>
+<section>
+    <div class="container-fluid mx-0 px-0" style="background: linear-gradient(180deg, #741625, #3a0b13);">
+      <div class="py-5 d-none d-lg-block">
+        <div class="row align-items-lg-center">
+          <div class="col-lg-6 col">
+              {% if page.banner_section.title %}
+            <div class="d-flex justify-content-center">
+              <h1 class="col-lg-6 col-9 display-1 text-white editable">{{page.banner_section.title}}</h1>
+            </div>
+              {% endif %}
+              {% if page.banner_section.description %}
+            <div class="d-flex justify-content-center ">
+              <p class="col-6 text-white fs-2 editable">{{ page.banner_section.description }}</p>
+            </div>
+              {% endif %}
+          </div>
+          <div class="col-6 legal-img d-lg-block d-none ">
+            {% if page.banner_section.background_image_url %}
+            <img class="img-fluid" src="{{ page.banner_section.background_image_url }}" alt="banner">
+            {% endif %}
+          </div>
         </div>
-          {% endif %}
-          {% if page.banner_section.description %}
-        <div class="d-flex justify-content-center ">
-          <p class="col-8 text-white fs-2">{{ page.banner_section.description }}</p>
+      </div>
+      <div class="d-block d-lg-none">
+          <div class="row py-5 mx-0 px-0">
+              <div class="col pt-5">
+                  {% if page.banner_section.title %}
+                  <div class="d-flex justify-content-around">
+                      <H1 class="col-10 text-white py-1 font-title editable">{{page.banner_section.title}}</H1>
+                  </div>
+                  {% endif %}
+              </div>
+              <div class="col-12 d-flex justify-content-center">
+                  {% if page.banner_section.description %}
+                  <div class="col-10">
+                      <p class="text-white display-1 editable ">{{ page.banner_section.description }}</p>
+                  </div>
+                  {% endif %}
+              </div>
+          </div>
+      </div>
+        <div class="col d-flex justify-content-center px-0 py-3 d-block d-lg-none " style="background-color: #70707040">
+            <div class=" ">
+              <a class="col-12 display-3 text-white link-underline link-underline-opacity-0 link-underline-opacity-0-hover font-size-3rem" href="tel:{{ general_data.phone }}">{{ general_data.phone }}</a>
+            </div>
         </div>
-          {% endif %}
-      </div>
-      <div class="col-6 legal-img">
-        {% if page.banner_section.background_image_url %}
-        <img class="img-fluid" src="{{ page.banner_section.background_image_url }}" alt="banner">
-        {% endif %}
-      </div>
+        <div class="bg-success py-4 d-flex d-lg-none justify-content-center">
+            <div class="col-10 ">
+                <h2 class="font-size-3rem text-uppercase text-white editable">CONTACT US now for a consultation</h2>
+            </div>
+        </div>
     </div>
-  </div>
+
 </section>
 
+<!--DESKTOP VERSION-->
 
-<section class="sliceZone">
+<section class="sliceZone d-lg-block d-none container-fluid">
    {% assign sectionTwo = page.personal_injury_section %}
     <section class="allServices fs-3 ">
-        <div class="allServices__Service row me-0 justify-content-end">
-          <div class="col-4 d-flex">
+        <div class="allServices__Service row mx-0 justify-content-end">
+          <div class="col-4 p-0">
             <img src="{{sectionTwo.image_url}}" alt="{{sectionTwo.title}}" class="img-fluid " />
           </div>
           <div class="d-flex col-8 justify-content-around pb-5">
-              <div class="allServices__Service__Text col-8 py-5">
+              <div class="allServices__Service__Text col-8 py-xl-5 py-lg-3">
                  {% if sectionTwo.title %}
                   <h3 class="px-4 fs-3  ">{{ sectionTwo.title }}</h3>
                  {% endif %}
@@ -178,16 +211,18 @@ additional_services_section:
                   <p class="px-4 fs-4 ">{{ sectionTwo.subtitle }}</p>
                   {% endif %}
                   <div class="fs-4">
-                    <div class="d-flex flex-wrap">
-                      {% for list in sectionTwo.lists %}
-                      <div class="col-6 d-flex link-container">
-                        <li class="ps-3" style="text-indent: -1em;">{{ list }}</li>
-                      </div>
-                      {% endfor %}
+                    <div class="d-grid lh-sm">
+                        <ul class="row ">
+                        {% for list in sectionTwo.lists %}
+                          <div class="col-6 py-1">
+                            <li class="ps-1 col-10" style="">{{ list }}</li>
+                          </div>
+                        {% endfor %}
+                        </ul>
                     </div>
                     {% if sectionTwo.button_text %}
 <!--                   <a href="{{ sectionTwo.button_url }}">{{sectionTwo.button_text}}</a>-->
-                    <a href="{{ sectionTwo.button_url }}" class="btn btn-lg rounded-0 text-uppercase border-success text-success mx-5 px-4 my-4" role="button">{{sectionTwo.button_text}}</a>
+                    <a href="{{ sectionTwo.button_url }}" class="btn btn-lg rounded-0 text-uppercase border-success text-success mx-5 px-4 my-xl-4 my-0" role="button">{{sectionTwo.button_text}}</a>
                     {% endif %}
                   </div>
               </div>
@@ -204,12 +239,14 @@ additional_services_section:
                 <p class="px-4 fs-4 ">{{ sectionThree.subtitle }}</p>
                 {% endif %}
                 <div class="fs-4">
-                  <div class="d-flex flex-wrap">
-                      {% for list in sectionThree.lists %}
-                      <div class="col-6 d-flex link-container">
-                        <li class="ps-3" style="text-indent: -1em;">{{ list }}</li>
-                      </div>
-                      {% endfor %}
+                  <div class="d-grid lh-sm">
+                        <ul class="row ">
+                        {% for list in sectionThree.lists %}
+                          <div class="col-6 py-1">
+                            <li class="ps-1 col-10" style="">{{ list }}</li>
+                          </div>
+                        {% endfor %}
+                        </ul>
                     </div>
                   {% if sectionThree.button_text %}
 <!--                   <a href="{{ sectionTwo.button_url }}">{{sectionTwo.button_text}}</a>-->
@@ -225,7 +262,7 @@ additional_services_section:
 
 
           {% assign sectionFour = page.family_law_section %}
-          <div class="col-4 d-flex">
+          <div class="col-4 p-0">
             <img src="{{sectionFour.image_url}}" alt="{{sectionFour.title}}" class="img-fluid " />
           </div>
           <div class="d-flex col-8 justify-content-around pb-5">
@@ -237,12 +274,14 @@ additional_services_section:
                   <p class="px-4 fs-4 ">{{ sectionFour.subtitle }}</p>
                   {% endif %}
                   <div class="fs-4">
-                    <div class="d-flex flex-wrap">
-                      {% for list in sectionFour.lists %}
-                      <div class="col-6 d-flex link-container">
-                        <li class="ps-3" style="text-indent: -1em;">{{ list }}</li>
-                      </div>
-                      {% endfor %}
+                    <div class="d-grid lh-sm">
+                        <ul class="row ">
+                        {% for list in sectionFour.lists %}
+                          <div class="col-6 py-1">
+                            <li class="ps-1 col-10" style="">{{ list }}</li>
+                          </div>
+                        {% endfor %}
+                        </ul>
                     </div>
                     {% if sectionFour.button_text %}
 <!--                   <a href="{{ sectionTwo.button_url }}">{{sectionTwo.button_text}}</a>-->
@@ -265,12 +304,14 @@ additional_services_section:
                 <p class="px-4 fs-4 ">{{ sectionFive.subtitle }}</p>
                 {% endif %}
                 <div class="fs-4">
-                  <div class="d-flex flex-wrap">
-                      {% for list in sectionFive.lists %}
-                      <div class="col-6 d-flex link-container">
-                        <li class="ps-3" style="text-indent: -1em;">{{ list }}</li>
-                      </div>
-                      {% endfor %}
+                  <div class="d-grid lh-sm">
+                        <ul class="row ">
+                        {% for list in sectionFive.lists %}
+                          <div class="col-6 py-1">
+                            <li class="ps-1 col-10" style="">{{ list }}</li>
+                          </div>
+                        {% endfor %}
+                        </ul>
                     </div>
                   {% if sectionFive.button_text %}
 <!--                   <a href="{{ sectionTwo.button_url }}">{{sectionTwo.button_text}}</a>-->
@@ -287,7 +328,7 @@ additional_services_section:
 
         {% assign sectionSix = page.estate_planning_section %}
 
-          <div class="col-4 d-flex">
+          <div class="col-4 p-0">
             <img src="{{sectionSix.image_url}}" alt="{{sectionSix.title}}" class="img-fluid " />
           </div>
           <div class="d-flex col-8 justify-content-around pb-5">
@@ -299,12 +340,14 @@ additional_services_section:
                   <p class="px-4 fs-4 ">{{ sectionSix.subtitle }}</p>
                   {% endif %}
                   <div class="fs-4">
-                    <div class="d-flex flex-wrap">
-                      {% for list in sectionSix.lists %}
-                      <div class="col-6 d-flex link-container">
-                        <li class="ps-3" style="text-indent: -1em;">{{ list }}</li>
-                      </div>
-                      {% endfor %}
+                    <div class="d-grid lh-sm">
+                        <ul class="row ">
+                        {% for list in sectionSix.lists %}
+                          <div class="col-6 py-1">
+                            <li class="ps-1 col-10" style="">{{ list }}</li>
+                          </div>
+                        {% endfor %}
+                        </ul>
                     </div>
                     {% if sectionSix.button_text %}
 <!--                   <a href="{{ sectionTwo.button_url }}">{{sectionTwo.button_text}}</a>-->
@@ -324,12 +367,14 @@ additional_services_section:
                 <p class="px-4 fs-4 ">{{ sectionSeven.subtitle }}</p>
                 {% endif %}
                 <div class="fs-4">
-                  <div class="d-flex flex-wrap">
-                      {% for list in sectionSeven.lists %}
-                      <div class="col-6 d-flex link-container">
-                        <li class="ps-3" style="text-indent: -1em;">{{ list }}</li>
-                      </div>
-                      {% endfor %}
+                  <div class="d-grid lh-sm">
+                        <ul class="row ">
+                        {% for list in sectionSeven.lists %}
+                          <div class="col-6 py-1">
+                            <li class="ps-1 col-10" style="">{{ list }}</li>
+                          </div>
+                        {% endfor %}
+                        </ul>
                     </div>
                   {% if sectionSeven.button_text %}
 <!--                   <a href="{{ sectionTwo.button_url }}">{{sectionTwo.button_text}}</a>-->
@@ -367,4 +412,37 @@ additional_services_section:
 <!--          </div>-->
         </div>
     </section>
+</section>
+
+<section class="container-fluid mx-0 px-0 d-block d-lg-none ">
+    <div class="allServices__Service row mx-0 justify-content-center"></div>
+    {% assign sectionTwo = page.personal_injury_section %}
+        <div class="">
+            <div class=" ">
+              <div class="allServices__Service__Text ">
+                 {% if sectionTwo.title %}
+                  <h3 class="section-title ">{{ sectionTwo.title }}</h3>
+                 {% endif %}
+                 {% if sectionTwo.subtitle %}
+                  <p class=" ">{{ sectionTwo.subtitle }}</p>
+                  {% endif %}
+                  <div class=" ">
+                    <div class="d-flex lh-sm">
+                        <ul class="row ">
+                        {% for list in sectionTwo.lists %}
+                          <div class=" ">
+                            <li class=" " style="">{{ list }}</li>
+                          </div>
+                        {% endfor %}
+                        </ul>
+                    </div>
+                    {% if sectionTwo.button_text %}
+<!--                   <a href="{{ sectionTwo.button_url }}">{{sectionTwo.button_text}}</a>-->
+                    <a href="{{ sectionTwo.button_url }}" class="btn btn-lg rounded-0 text-uppercase border-success text-success mx-5 px-4 my-xl-4 my-0" role="button">{{sectionTwo.button_text}}</a>
+                    {% endif %}
+                  </div>
+              </div>
+          </div>
+
+        </div>
 </section>
