--- a/_pages/about.html
+++ b/_pages/about.html
@@ -22,9 +22,11 @@ gallery:
   - image_url: "/assets/images/banner_2.jpg"
   - image_url: "/assets/images/big_man.jpg"
   - image_url: "/assets/images/banner_one.jpg"
-description: >-
-   Shane McCormick was born in Port Sulphur, Louisiana in 1968. In 1980, his family relocated to Crowley, Louisiana where he attended high school. Upon graduation in 1986 Shane joined the United States Navy, where he rose to the rank of EW3 and served on several different vessels. In 1991, he was honorably discharged after having served in Operation Desert Storm. From 2001 to 2009, he also served as a reserve officer and Captain in the Judge Advocate General’s Corps of the United States Army, providing vital legal support to soldiers being deployed during Operation Enduring Freedom.<br /><br /> Following his journey with the United States Navy, Shane attended the University of Louisiana at Lafayette (formerly University of Southwestern Louisiana) where he earned his Bachelor of Arts degree. In 2000, he received his Juris Doctorate from Southern University Law Center in Baton Rouge. Upon graduation, Shane began work in the courts system as a judicial law clerk under the Honorable Phyllis Keaty.<br /> <br />From 2002 to 2013 Shane and his business partner operated Brazee & McCormick, an independent full-service law firm in Lafayette. From there, McCormick Law Firm was born and a new chapter had begun.<br /> <br /> McCormick Law firm provides excellent legal representation for diverse clientele across Acadiana. Our practice areas include litigation services for criminal law, personal injury, family law, and more. Whether you’re faced with a drug charge, going through a divorce, or were injured at the hands of someone else, you need the most skilled and professional legal services available. Rely on an attorney that knows the system, to get you the fair compensation that you deserve. Trust an experienced attorney and legal team to have your back: anytime, anywhere. Trust McCormick Law Firm.
-
+description:
+  - section: "Shane McCormick was born in Port Sulphur, Louisiana in 1968. In 1980, his family relocated to Crowley, Louisiana where he attended high school. Upon graduation in 1986 Shane joined the United States Navy, where he rose to the rank of EW3 and served on several different vessels. In 1991, he was honorably discharged after having served in Operation Desert Storm. From 2001 to 2009, he also served as a reserve officer and Captain in the Judge Advocate General’s Corps of the United States Army, providing vital legal support to soldiers being deployed during Operation Enduring Freedom."
+  - section: "Following his journey with the United States Navy, Shane attended the University of Louisiana at Lafayette (formerly University of Southwestern Louisiana) where he earned his Bachelor of Arts degree. In 2000, he received his Juris Doctorate from Southern University Law Center in Baton Rouge. Upon graduation, Shane began work in the courts system as a judicial law clerk under the Honorable Phyllis Keaty."
+  - section: "From 2002 to 2013 Shane and his business partner operated Brazee & McCormick, an independent full-service law firm in Lafayette. From there, McCormick Law Firm was born and a new chapter had begun."
+  - section: "McCormick Law firm provides excellent legal representation for diverse clientele across Acadiana. Our practice areas include litigation services for criminal law, personal injury, family law, and more. Whether you’re faced with a drug charge, going through a divorce, or were injured at the hands of someone else, you need the most skilled and professional legal services available. Rely on an attorney that knows the system, to get you the fair compensation that you deserve. Trust an experienced attorney and legal team to have your back: anytime, anywhere. Trust McCormick Law Firm."
 one_column_section: >-
   Our goal is to provide an effective legal strategy to reach a favorable outcome for our clients. We will properly evaluate your unique situation and guide you throughout the legal process. You can trust R.Shane McCormick to get the most favorable outcome for your case. Call now for a free consultation.
 ---
@@ -32,28 +34,28 @@ one_column_section: >-
 {% assign general_data = site.data.general_settings %}
 
 <div>
-<section class="pageHero pageHero--Halfs">
+<section class="text-white">
 	<div class="pageHero__ImageWrapper pageHero__ImageWrapper--Halfs">
 	 {% if page.about_section.background_image_url %}
 	  <img class="pageHero__Image" src="{{ page.about_section.background_image_url }}" />
 	 {% endif %}
 	</div>
-	<div class="pageHero__Text">
+	<div class="pt-5 " style="background: linear-gradient(180deg, #741625, #3a0b13); ">
 	    {% if page.about_section.title %}
-		 <h1>{{ page.about_section.title }}</h1>
+		 <h1 class="font-size-5-rem pt-5 pb-3 px-5 px-lg-0 py-lg-0 my-0 editable">{{ page.about_section.title }}</h1>
 		{% endif %}
 		{% if page.about_section.description %}
-		 <p class="pageDesc--About">{{ page.about_section.description }}</p>
+		 <p class="fs-1 px-5 px-lg-0 pb-5 pb-lg-0 editable">{{ page.about_section.description }}</p>
 		{% endif %}
-		<div class="pageHero__Phone">
-		 <a href="tel:{{ general_data.phone }}">{{ general_data.phone }}</a>
+		<div class="d-flex justify-content-center d-lg-none py-4 py-lg-0" style="background-color: #70707040">
+		 <a href="tel:{{ general_data.phone }}" class="display-1 link-underline link-underline-opacity-0 text-white">{{ general_data.phone }}</a>
 		</div>
 	</div>
-	<div class="pageHero__Form">
+	<div class="pageHero__Form py-5 d-flex justify-content-center">
 	    {% if page.contact_section.title %}
-		 <h2>{{ page.contact_section.title }}</h2>
+		 <h2 class="py-0 my-0 col-10 text-uppercase font-size-3rem d-lg-none">{{ page.contact_section.title }}</h2>
 		{% endif %}
-		<section class="formSection">
+		<section class="formSection d-none">
 		    {% if page.contact_section.sub_title %}
 			 <h5 class="formSection__Heading">{{ page.contact_section.sub_title }}</h5>
 			{% endif %}
@@ -72,13 +74,21 @@ one_column_section: >-
 	</div>
 </section>
 </div>
-<section class="sliceZone">
-<section class="aboutSection">
-	<div class="aboutSection__Text">
-		<div class="sanityText">
-			{% if page.description %}
-             <p> {{ page.description }} </p>
-			{% endif %}
+<section class="sliceZone d-flex row px-0 mx-0 justify-content-center">
+	<div class="about-mobile-img mt-5 mb-3">
+		{% for item in page.gallery %}
+		{% unless forloop.first %}
+		{% break %}
+		{% endunless %}
+		<img src="{{ item.image_url }}" class="{% if forloop.first %} d-flex d-lg-none rounded-circle about-mobile-cover {% else %} {% endif %}" >
+		{% endfor %}
+	</div>
+<section class="aboutSection pt-0 px-0 mx-0">
+	<div class="d-flex justify-content-center ">
+		<div class="col-10 ">
+			{% for item in page.description %}
+             <p class="py-3 "> {{ item.section }} </p>
+			{% endfor %}
 		</div>
 		<section class="formSection">
 		    {% if page.contact_section.sub_title %}
@@ -87,7 +97,7 @@ one_column_section: >-
 			{% include form.html %}
 		</section>
 	</div>
-	<div class="aboutSection__Images">
+	<div class="aboutSection__Images d-none d-lg-block">
 	   {% for gallery in page.gallery %}
 		<div class="aboutSection__ImgWrapper">
 		  <img src="{{ gallery.image_url }}" class="aboutSection__Img" />
