--- a/_pages/legal-services.html
+++ b/_pages/legal-services.html
@@ -207,8 +207,8 @@ additional_services_section:
     <section class="allServices fs-3 ">
         <div class="allServices__Service row mx-0 justify-content-end">
             <div class="row mx-0 px-0">
-                <div class="col-4 p-0">
-                    <img src="{{sectionTwo.image_url}}" alt="{{sectionTwo.title}}" class="img-fluid " />
+                <div class="col-4 p-0 d-flex">
+                    <img src="{{sectionTwo.image_url}}" alt="{{sectionTwo.title}}" class="w-100" />
                 </div>
                 <div class="d-flex col-8 justify-content-around pb-5">
                     <div class="allServices__Service__Text col-8 py-xl-5 py-lg-3">
@@ -228,10 +228,12 @@ additional_services_section:
                                 {% endfor %}
                                 </ul>
                             </div>
+                        <div class=" ">
                             {% if sectionTwo.button_text %}
         <!--                   <a href="{{ sectionTwo.button_url }}">{{sectionTwo.button_text}}</a>-->
                             <a href="{{ sectionTwo.button_url }}" class="btn btn-lg rounded-0 text-uppercase border-success text-success mx-5 px-4 my-xl-4 my-0" role="button">{{sectionTwo.button_text}}</a>
                             {% endif %}
+                        </div>
                         </div>
                     </div>
                 </div>
@@ -239,9 +241,9 @@ additional_services_section:
 
           {% assign sectionThree = page.criminal_law_section %}
            {% if sectionThree.image_url %}
-            <div class=" row mx-0 px-0">
+            <div class=" row mx-0 px-0 justify-content-end" style="background-color: #eef2f3;">
                 <div class="d-flex col-7 justify-content-around pb-5">
-                    <div class="allServices__Service__Text col-11 py-5">
+                    <div class="allServices__Service__Text col-11 py-5" style="background-color: #eef2f3;">
                         {% if sectionThree.title %}
                         <h3 class="px-4 fs-3  ">{{ sectionThree.title }}</h3>
                         {% endif %}
@@ -265,16 +267,16 @@ additional_services_section:
                     </div>
                   {% endif %}
               </div>
-              <div class="col-4 p-0 ">
-                  <img src="{{sectionThree.image_url}}" alt="{{sectionThree.title}}" class="img-fluid " />
+              <div class="col-4 p-0 d-flex">
+                  <img src="{{sectionThree.image_url}}" alt="{{sectionThree.title}}" class="w-100" />
               </div>
           </div>
 
 
           {% assign sectionFour = page.family_law_section %}
             <div class="row mx-0 px-0">
-                <div class="col-4 p-0">
-                    <img src="{{sectionFour.image_url}}" alt="{{sectionFour.title}}" class="img-fluid " />
+                <div class="col-4 p-0 d-flex">
+                    <img src="{{sectionFour.image_url}}" alt="{{sectionFour.title}}" class="w-100 " />
                 </div>
                 <div class="d-flex col-8 justify-content-around pb-5">
                     <div class="allServices__Service__Text col-8 py-5">
@@ -307,9 +309,9 @@ additional_services_section:
           {% assign sectionFive = page.dwi_owi_section %}
 
             {% if sectionFive.image_url %}
-            <div class="row px-0 mx-0">
+            <div class="row px-0 mx-0 justify-content-end" style="background-color: #eef2f3;">
                 <div class="d-flex col-7 justify-content-around pb-5">
-                    <div class="allServices__Service__Text col-11 py-5">
+                    <div class="allServices__Service__Text col-11 py-5" style="background-color: #eef2f3;">
                         {% if sectionFive.title %}
                         <h3 class="px-4 fs-3  ">{{ sectionThree.title }}</h3>
                             {% endif %}
@@ -334,16 +336,16 @@ additional_services_section:
                     </div>
                 </div>
                 {% endif %}
-                <div class="col-4 p-0 ">
-                    <img src="{{sectionFive.image_url}}" alt="{{sectionFive.title}}" class="img-fluid " />
+                <div class="col-4 p-0 d-flex">
+                    <img src="{{sectionFive.image_url}}" alt="{{sectionFive.title}}" class="w-100 " />
                 </div>
             </div>
 
 
         {% assign sectionSix = page.estate_planning_section %}
             <div class="row mx-0 px-0 ">
-                <div class="col-4 p-0">
-                    <img src="{{sectionSix.image_url}}" alt="{{sectionSix.title}}" class="img-fluid " />
+                <div class="col-4 p-0 d-flex">
+                    <img src="{{sectionSix.image_url}}" alt="{{sectionSix.title}}" class="w-100 " />
                 </div>
                 <div class="d-flex col-8 justify-content-around pb-5">
                     <div class="allServices__Service__Text col-8 py-5">
@@ -373,9 +375,9 @@ additional_services_section:
             </div>
         {% assign sectionSeven = page.additional_services_section %}
           {% if sectionSeven.image_url %}
-            <div class="row px-0 mx-0">
+            <div class="row px-0 mx-0 justify-content-end" style="background-color: #eef2f3;">
                 <div class="d-flex col-7 justify-content-around pb-5">
-                    <div class="allServices__Service__Text col-11 py-5">
+                    <div class="allServices__Service__Text col-11 py-5" style="background-color: #eef2f3;">
                         {% if sectionSeven.title %}
                         <h3 class="px-4 fs-3  ">{{ sectionSeven.title }}</h3>
                             {% endif %}
@@ -400,8 +402,8 @@ additional_services_section:
                     </div>
                     {% endif %}
                 </div>
-                <div class="col-4 p-0 ">
-                    <img src="{{sectionSeven.image_url}}" alt="{{sectionSeven.title}}" class="img-fluid " />
+                <div class="col-4 p-0 d-flex">
+                    <img src="{{sectionSeven.image_url}}" alt="{{sectionSeven.title}}" class="w-100 " />
                 </div>
             </div>
         </div>
